--- a/config/sync/system.theme.yml
+++ b/config/sync/system.theme.yml
@@ -1,4 +1,4 @@
 _core:
   default_config_hash: eJ529VM1gSIA_vgTy2PdiDvJuG0xhSxfQjCyl5WKlv4
-admin: gutenberg_starter
-default: gutenberg_starter
+admin: olivero
+default: gutenberg_starterkit
