--- a/.github/workflows/dev_multidev.yml
+++ b/.github/workflows/dev_multidev.yml
@@ -17,7 +17,7 @@ env:
   CI_BRANCH: ${{ github.head_ref || github.ref_name }}
   BASE_BRANCH: ${{ github.base_ref }}
   SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
   GITHUB_OWNER: ${{ github.repository_owner }}
   PRODUCTION_BRANCH: "main"
   PR_NUMBER: ${{ github.event.number }}
@@ -99,7 +99,7 @@ jobs:
       # Deploy to Pantheon
       - name: Deploy to Pantheon
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GIT_TOKEN }}
         run: |
           echo "$SSH_PRIVATE_KEY" > ../private.key
           chmod 600 ../private.key
