Update drupal version to latest one. (#3)

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.4",
+        "drupal/core": "^11.1",
         "drupal/core-composer-scaffold": "^11.0",
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
