DGC-32: Styleguide Setup along with Gutenberg (#1)
* Theme & Storybook Update (WORK IN PROGRESS)

* Added YML Loader & created Atoms for Typography & Colors

* Story Updates & Gitignore

* Removed storybook-static from Git tracking

* Added Configuration for theme

* Updated: Aliases, SCSS. Gitignore & JS

* Updated the SCSS Compileation & gitignore

* Enable the govcon theme.

* Update the import command inside the github action.

* Created Atom for Logo & Icons

* Renamed WOFF Icon Font

* Remove the configuration import task from github action.

* Update the frontend build.

* Update github action for frontend.

* Update the frontend command.

* Install ddev inside github action.

* Install ddev inside github action.

* Install ddev inside github action.

* Install ddev inside github action.

* Install ddev inside github action.

* Install ddev inside github action.

* Configured Twig with Drupal

* Added the namespace support to storybook.

* Add yarnrc to the repo.

* Update the frontend command.

* Add the frontend command inside ddev.

* Cleanup the unused css from theme.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,4 +1,4 @@
-name: drupal-gutenberg
+name: drupal-govcon
 type: drupal11
 docroot: web
 php_version: "8.3"
@@ -12,7 +12,18 @@ database:
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
+nodejs_version: "22"
 corepack_enable: true
+webimage_extra_packages:
+  - yarn
+hooks:
+  post-start:
+    - exec: "corepack enable && yarn set version stable"
+web_extra_exposed_ports:
+    - name: storybook
+      container_port: 6006
+      http_port: 6007
+      https_port: 6006
 
 # Key features of DDEV's config.yaml:
 
