--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -13,6 +13,7 @@ module:
   cambridge_blocks: 0
   ckeditor5: 0
   comment: 0
+  components: 0
   config: 0
   contact: 0
   contextual: 0
@@ -53,6 +54,6 @@ theme:
   olivero: 0
   claro: 0
   stable9: 0
-  gutenberg_starterkit: 0
+  govcon: 0
   gutenberg_starter: 0
 profile: standard
