--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
         "drupal/gutenberg": "^3.0@dev",
+        "drupal/menu_link_attributes": "^1.5",
         "drupal/twig_debugger": "^1.1",
         "drush/drush": "^13.3",
         "pantheon-systems/drupal-integrations": "^11.0"
