--- a/web/themes/custom/govcon/package.json
+++ b/web/themes/custom/govcon/package.json
@@ -3,39 +3,42 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006 --ci",
-    "build-storybook": "storybook build",
-    "prod": "yarn build-storybook"
+    "dev": "yarn development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js --watch",
+    "prod": "yarn production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js  --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@rollup/plugin-yaml": "^4.1.2",
-    "@storybook/addon-essentials": "^8.5.8",
-    "@storybook/addon-interactions": "^8.5.8",
-    "@storybook/addon-onboarding": "^8.5.1",
-    "@storybook/blocks": "^8.5.1",
-    "@storybook/builder-vite": "^8.5.8",
-    "@storybook/html": "^8.5.8",
-    "@storybook/html-vite": "^8.5.8",
-    "@storybook/test": "^8.5.8",
-    "glob": "^11.0.1",
-    "path": "^0.12.7",
-    "prettier": "^3.5.2",
-    "prop-types": "^15.8.1",
-    "sass": "^1.85.1",
-    "storybook": "^8.5.1",
-    "vite": "^6.2.0",
-    "vite-plugin-twig": "^2.1.1",
-    "vite-plugin-twig-drupal": "^1.6.0"
-  },
   "packageManager": "yarn@4.6.0",
-  "dependencies": {
-    "twig-loader": "^0.5.5",
+  "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.5",
+    "@storybook/addon-a11y": "^8.6.0",
+    "@storybook/addon-essentials": "^8.6.0",
+    "@storybook/addon-interactions": "^8.6.0",
+    "@storybook/addon-links": "^8.6.0",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/addon-webpack5-compiler-swc": "^2.1.0",
+    "@storybook/blocks": "^8.6.0",
+    "@storybook/html": "^8.6.0",
+    "@storybook/html-webpack5": "^8.6.0",
+    "@storybook/test": "^8.6.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
+    "laravel-mix": "^6.0.49",
+    "sass": "^1.85.1",
+    "sass-loader": "^16.0.5",
+    "storybook": "^8.6.0",
+    "style-loader": "^4.0.0",
+    "twigjs-loader": "^1.0.3",
     "yaml-loader": "^0.8.1"
+  },
+  "dependencies": {
+    "twig": "^1.17.1"
   }
 }
