DGC-33: Created footer BE structure. (#7)
* DGC-33: Created footer BE structure.

* DGC-33: Updated module name.

* DGC-33: Restored accidentally deleted config files.

* DGC-33: Remove unused file.

* DGC-33: Restored configuration to original.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -10,6 +10,7 @@ dependencies:
     - comment
     - contextual
     - file
+    - govcon_custom
     - node
     - path
     - system
@@ -41,6 +42,7 @@ permissions:
   - 'edit own comments'
   - 'edit own page content'
   - 'edit terms in tags'
+  - 'manage custom settings'
   - 'revert all revisions'
   - 'view all revisions'
   - 'view own unpublished content'
