--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.4",
         "drupal/components": "^3.1",
+        "drupal/config_ignore": "^3.3",
         "drupal/core": "^11.1",
         "drupal/core-composer-scaffold": "^11.0",
         "drupal/core-project-message": "^11.0",
