--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -15,6 +15,7 @@ module:
   comment: 0
   components: 0
   config: 0
+  config_ignore: 0
   contact: 0
   contextual: 0
   datetime: 0
@@ -26,6 +27,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  govcon_custom: 0
   gutenberg: 0
   help: 0
   history: 0
