DGC-11: Fix the issue with ddev init (#11)
* DGC-11: Fix the issue with ddev init

* Fix the issue with build

* Run the frontend build during deployment

--- a/.github/workflows/dev_multidev.yml
+++ b/.github/workflows/dev_multidev.yml
@@ -96,19 +96,33 @@ jobs:
         run: |
           composer install --optimize-autoloader --no-progress --no-dev
 
-      # - name: Install DDEV
-      #   run: |
-      #     LATEST_DDEV_VERSION=$(curl -s https://api.github.com/repos/ddev/ddev/releases/latest | jq -r '.tag_name')
-      #     wget "https://github.com/ddev/ddev/releases/download/${LATEST_DDEV_VERSION}/ddev_linux_amd64.deb"
-      #     sudo dpkg -i ddev_linux_amd64.deb
-      #     ddev --version
-      #     ddev config global --instrumentation-opt-in=false --omit-containers=ddev-ssh-agent
+      - name: Install DDEV
+        run: |
+          sudo apt-get update && sudo apt-get install -y curl jq libnss3-tools
+          LATEST_DDEV_VERSION=$(curl -s https://api.github.com/repos/ddev/ddev/releases/latest | jq -r '.tag_name')
+          echo "Latest DDEV version: $LATEST_DDEV_VERSION"
 
-      # - name: Start DDEV
-      #   run: ddev start
+          DDEV_ASSET_URL=$(curl -s https://api.github.com/repos/ddev/ddev/releases/latest | jq -r '.assets[] | select(.name | test("ddev_.*_linux_amd64.deb")) | .browser_download_url')
 
-      # - name: Run Frontend Production Build
-      #   run: ddev frontend prod
+          if [[ -z "$DDEV_ASSET_URL" ]]; then
+            echo "Error: Could not find the correct DDEV .deb package"
+            exit 1
+          fi
+
+          echo "Downloading: $DDEV_ASSET_URL"
+          wget "$DDEV_ASSET_URL" -O ddev.deb
+          sudo dpkg -i ddev.deb
+          rm ddev.deb
+
+          ddev --version
+          ddev config global --instrumentation-opt-in=false --omit-containers=ddev-ssh-agent
+
+
+      - name: Start DDEV
+        run: ddev start
+
+      - name: Run Frontend Production Build
+        run: ddev frontend prod
 
       # Deploy to Pantheon
       - name: Deploy to Pantheon
