--- a/config/sync/node.type.landing_page.yml
+++ b/config/sync/node.type.landing_page.yml
@@ -1,4 +1,4 @@
-uuid: ae50b93e-7e5e-4aa7-8ffe-78267314a97b
+uuid: 6432842a-d13c-4865-aca1-9fae913f1e70
 langcode: en
 status: true
 dependencies:
@@ -9,10 +9,10 @@ third_party_settings:
     available_menus:
       - main
     parent: 'main:'
-name: 'Cambridge Landing Page'
-type: cambridge_landing_page
+name: 'Landing Page'
+type: landing_page
 description: null
 help: null
 new_revision: true
 preview_mode: 1
-display_submitted: false
+display_submitted: true
