--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "drupal/core-recommended": "^11.0",
         "drupal/gutenberg": "^3.0@dev",
         "drupal/menu_link_attributes": "^1.5",
+        "drupal/metatag": "^2.1",
         "drupal/twig_debugger": "^1.1",
         "drush/drush": "^13.3",
         "pantheon-systems/drupal-integrations": "^11.0"
