DGC-14:   FE: Header (#9)
* Created Header in Storybook

* Code Updates

* Updated Code Fixes

* Updated Code

* Updated Page.html & Colors Name

* Updated SCSS

* Updated Icons and Added Mixins

* Updated Menus

* Updated HTML with Classes and Remove the SCSS

* Updated Config as per the MAIN branch

* Removed The Sub Menu JS

* Header Fixed in Mobile

* Updated Header Code

* DGC-14: Update the header theming.

* DGC-14: Refactor header code.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/menu_link_attributes": "^1.5",
         "drupal/metatag": "^2.1",
         "drupal/twig_debugger": "^1.1",
+        "drupal/twig_tweak": "^3.4",
         "drush/drush": "^13.3",
         "pantheon-systems/drupal-integrations": "^11.0"
     },
