--- a/web/themes/custom/govcon/components/atoms/colors/colors.yml
+++ b/web/themes/custom/govcon/components/atoms/colors/colors.yml
@@ -1,9 +1,9 @@
 palettes:
   - palette_heading: "Theme Colors"
     colors:
-      - name: "Primary Lighter"
+      - name: "SkyBlue"
         code: "#7AD1E7"
-      - name: "Primary Light"
+      - name: "Dark Blue"
         code: "#107DB5"
       - name: "Primary"
         code: "#285A83"
@@ -18,22 +18,22 @@ palettes:
 
   - palette_heading: "Heading Colors"
     colors:
-      - name: "Heading"
-        code: "#213B75"
-      - name: "Heading Primary"
+      - name: "Primary Black"
         code: "#202020"
-      - name: "Disabled"
+      - name: "White"
+        code: "#FFFFFF"
+      - name: "Black"
+        code: "#000000"
+      - name: "Gray"
         code: "#868686"
-      - name: "Heading Light"
-        code: "#F4FAFF"
 
   - palette_heading: "Links"
     colors:
-      - name: "Link Light"
+      - name: "cobalt"
         code: "#014AB9"
-      - name: "Link Hover"
+      - name: "Indigo"
         code: "#003381"
-      - name: "Link Visited"
+      - name: "Violet"
         code: "#4A00DE"
-      - name: "Link Dark"
+      - name: "Light Blue"
         code: "#B1DCFF"
