--- a/config/sync/block.block.govcon_useraccountmenu.yml
+++ b/config/sync/block.block.govcon_useraccountmenu.yml
@@ -17,7 +17,7 @@ plugin: 'system_menu_block:account'
 settings:
   id: 'system_menu_block:account'
   label: 'User account menu'
-  label_display: visible
+  label_display: '0'
   provider: system
   level: 1
   depth: 0
