--- a/web/themes/custom/govcon/package.json
+++ b/web/themes/custom/govcon/package.json
@@ -33,6 +33,7 @@
     "laravel-mix": "^6.0.49",
     "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
+    "scss-reset": "^1.4.6",
     "storybook": "^8.6.0",
     "style-loader": "^4.0.0",
     "twigjs-loader": "^1.0.3",
