DGC-000: Add structure sync module, and featured sessions pattern (#23)
* DGC-000: Add structure sync module, and featured sessions pattern

* DGC-000: Update init command to import strucure sync data

* DGC-000: Update dev-multidev script to auto import on deployment

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/gutenberg": "^3.0@dev",
         "drupal/menu_link_attributes": "^1.5",
         "drupal/metatag": "^2.1",
+        "drupal/structure_sync": "^2.0",
         "drupal/twig_debugger": "^1.1",
         "drupal/twig_tweak": "^3.4",
         "drush/drush": "^13.3",
