--- a/config/sync/gutenberg.settings.yml
+++ b/config/sync/gutenberg.settings.yml
@@ -70,23 +70,40 @@ field_metatags_enable_full: true
 field_metatags_template: "[\r\n  [\"core/heading\", {\"level\": 1, \"content\": \"{{title}}\"}],\r\n  [\"core/paragraph\", {\"placeholder\": \"Insert text\"}]\r\n]"
 field_metatags_template_lock: none
 landing_page_allowed_blocks:
+  - core/all
+  - core/audio
   - core/block
   - core/button
   - core/buttons
+  - core/code
   - core/column
   - core/columns
   - core/cover
+  - core/details
   - core/embed
+  - core/file
   - core/gallery
+  - core/group
+  - core/html
   - core/image
+  - core/media-text
+  - core/preformatted
+  - core/pullquote
+  - core/quote
+  - core/separator
+  - core/social-link
+  - core/social-links
+  - core/spacer
+  - core/table
+  - core/text-columns
+  - core/verse
   - core/video
 landing_page_allowed_content_block_types: {  }
-landing_page_allowed_drupal_blocks:
-  - search_form_block
-  - system_breadcrumb_block
+landing_page_allowed_drupal_blocks: {  }
 landing_page_enable_full: true
 landing_page_template: "[\r\n[\"drupal/simple-text\", {\"placeholder\": \"Insert Page Title\",\"tag\":\"h1\", \"mappingFields\":[{\"field\": \"title\"}]}]\r\n]"
 landing_page_template_lock: none
+session_archive_enable_full: false
 sponsor_enable_full: false
 cambridge_landing_page_allowed_image_styles:
   full: full
@@ -112,4 +129,3 @@ demo_allowed_image_styles:
   medium: medium
   thumbnail: thumbnail
   wide: wide
-session_archive_enable_full: false
