--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,8 +2,8 @@ _core:
   default_config_hash: ijfbzDTN4CbE7Sr-6ubWzy_t1vH4OtU1doNCLssVz-4
 langcode: en
 uuid: 0365e755-6b62-478e-9f9a-5a48a18d3459
-name: 'Drush Site-Install'
-mail: admin@example.com
+name: 'Drupal GovCon'
+mail: no-reply@drupalgovcon.org
 slogan: ''
 page:
   403: ''
