--- a/config/sync/core.entity_view_display.node.session_archive.default.yml
+++ b/config/sync/core.entity_view_display.node.session_archive.default.yml
@@ -16,10 +16,12 @@ dependencies:
     - field.field.node.session_archive.field_session_date_time
     - field.field.node.session_archive.field_session_track
     - field.field.node.session_archive.field_status
+    - field.field.node.session_archive.field_supporting_documents
     - field.field.node.session_archive.field_video
     - node.type.session_archive
   module:
     - datetime
+    - file
     - image
     - link
     - metatag
@@ -139,6 +141,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 111
+    region: content
+  field_supporting_documents:
+    type: file_default
+    label: above
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
+    weight: 114
     region: content
   field_video:
     type: entity_reference_entity_view
